# nox-poetry

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.rst  README.md  README.rst  cutty.json  mypy.ini  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  labeler.yml  release.yml  test-pypi.yml  tests.yml
docs/: conf.py  index.md  index.rst  reference.md  reference.rst  requirements.txt  usage.rst
src/nox_poetry/: __init__.py  __main__.py  consts.py  core.py  hookimpl.py  patch.py  poetry.py  sessions.py  sessions.pyi
tests/: __init__.py  conftest.py  test_main.py  test_nox_poetry.py
tests/functional/: __init__.py  conftest.py  test_functional.py  test_install.py  test_install_groups.py  test_installroot.py  test_patch.py  test_poetry.py  test_session.py  test_sessions.py
tests/functional/data/dependency-group/: dependency_group.py  pyproject.toml
tests/functional/data/example/: pyproject.toml
tests/functional/data/example-v1.2.0/: pyproject.toml
tests/functional/data/example-v1.2.0/src/example_v1_2_0/: __init__.py
tests/functional/data/outdated-lockfile/: pyproject.toml
tests/functional/data/outdated-lockfile/src/outdated_lockfile/: __init__.py
tests/functional/data/path-dependency/: pyproject.toml
tests/functional/data/pep-621/: pyproject.toml
tests/functional/data/pep-621/pep_621_pyproject/: __init__.py
tests/functional/data/simple503/thispackagedoesnotexist/: index.html
tests/functional/data/url-dependency/: pyproject.toml
tests/functional/data/v1.2.0-example/: pyproject.toml
tests/functional/test_functional/example/: pyproject.toml
tests/functional/test_functional/outdated-lockfile/: pyproject.toml
tests/functional/test_functional/path-dependency/src/path_dependency/: __init__.py
tests/functional/test_functional/url-dependency/: pyproject.toml
tests/functional/test_functional/url-dependency/src/url_dependency/: __init__.py
tests/test_functional/example/: pyproject.toml
tests/unit/: conftest.py  test_nox_poetry.py  test_poetry.py  test_sessions.py
tests/unit/data/simple503/: bar-0.1.0-py2.py3-none-any.whl  index.html  thispackagedoesnotexist-0.1.0-py2.py3-none-any.whl  thispackagedoesnotexist-0.1.0-py2.py3-none-any.whl.metadata
tests/unit/data/simple503/bar/: index.html
tests/unit/data/simple503/thispackagedoesnotexist/: index.html
