[tool.poetry]
name = "nox-poetry"
version = "0.9.0"
description = "nox-poetry"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/cjolowicz/nox-poetry"
repository = "https://github.com/cjolowicz/nox-poetry"
documentation = "https://nox-poetry.readthedocs.io"
classifiers = [
    "Development Status :: 3 - Alpha",
]

[tool.poetry.urls]
Changelog = "https://github.com/cjolowicz/nox-poetry/releases"

[tool.poetry.dependencies]
python = "^3.7"
nox = ">=2020.8.22"
tomlkit = "^0.7.0"
packaging = ">=20.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = {extras = ["toml"], version = "^6.0"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.13.0"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
sphinx = "^4.3.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.15.0"
flake8 = "^4.0.1"
black = "^21.10b0"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.9.2"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.1"
darglint = "^1.8.1"
reorder-python-imports = "^2.6.0"
pre-commit-hooks = "^4.0.1"
furo = "^2021.11.16"
Pygments = "^2.10.0"
poetry = "^1.1.11"
pytest-datadir = "^1.3.1"
typing-extensions = "^4.0.0"
pyupgrade = "^2.29.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["nox_poetry"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
