[tool.poetry]
name = "nox-poetry"
version = "1.2.0"
description = "nox-poetry"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cjolowicz/nox-poetry"
repository = "https://github.com/cjolowicz/nox-poetry"
documentation = "https://nox-poetry.readthedocs.io"
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.urls]
Changelog = "https://github.com/cjolowicz/nox-poetry/releases"

[tool.poetry.dependencies]
python = ">=3.9"
build = ">=1.2"
nox = ">=2020.8.22"
packaging = ">=20.9"
tomlkit = ">=0.7"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.5"
coverage = {extras = ["toml"], version = ">=6.3"}
safety = ">=1.10.3"
mypy = ">=0.931"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.17.0"
flake8 = ">=4.0.1"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
# TODO: The 'python < 4' constraint is a workaround to allow poetry to
#       generate a lock file. Hopefully there's an alternative to darglint
#       before Python 4 is released.
darglint = {version = ">=1.8.1", python = "< 4"}
pre-commit-hooks = ">=4.1.0"
furo = ">=2022.1.2"
Pygments = ">=2.11.2"
# TODO: Remove the 'python' constraint once poetry drops its own constraint
poetry = {version=">=1.1.12", python="<4"}
poetry-plugin-export = {version = ">=1.7.0", python = "<4"}
pytest-datadir = ">=1.3.1"
typing-extensions = ">=4.0.1"
myst-parser = ">=0.16.1"
ruff = ">=0.6.5"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["nox_poetry"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",   # pycodestyle (error)
    "W",   # pycodestyle (warning)
    "C90", # mccabe
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "S",   # flake8-bandit
    "B",   # flake8-bugbear
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018", "S101", "S607"]

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
warn_unreachable = true
warn_unused_ignores = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
