[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Your Name <your.name@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
first = "^2.0.0"
Pygments = {version = "^2.7.1", optional = true}

[tool.poetry.dev-dependencies]
pyflakes = "^2.1.1"
pycodestyle = "^2.5.0"

[tool.poetry.extras]
pygments = ["pygments"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi-all-source1"
url = "https://pypi-all-source1/pypi/simple"
default = true

[[tool.poetry.source]]
name = "pypi-all-source2"
url = "https://pypi-all-source2/pypi/simple"
