[tool.poetry]
name = "url-dependency"
version = "0.1.0"
description = ""
authors = ["Your Name <your.name@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
poyo = {url = "https://github.com/hackebrot/poyo/archive/master.zip"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
